solution to problemset I.1 problem 2

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -49,4 +49,18 @@ print(b)
 columns. Write that as Ax = Ay. Find two combinations of the columns of A that
 equal the zero vector (in matrix language, find two solutions to Az = 0).
 
+\begin{displaymath}
+-2 \begin{bmatrix} 1 \\ 2 \\ 3 \\ 4 \end{bmatrix}
+- \begin{bmatrix} 4 \\ 5 \\ 6 \\ 7 \end{bmatrix}
++ 3 \begin{bmatrix} 2 \\ 3 \\ 4 \\ 5 \end{bmatrix}
+= \begin{bmatrix} 0 \\ 0 \\ 0 \\ 0 \end{bmatrix}
+\end{displaymath}
+
+\begin{displaymath}
+4 \begin{bmatrix} 1 \\ 2 \\ 3 \\ 4 \end{bmatrix}
++ 2 \begin{bmatrix} 4 \\ 5 \\ 6 \\ 7 \end{bmatrix}
+- 6 \begin{bmatrix} 2 \\ 3 \\ 4 \\ 5 \end{bmatrix}
+= \begin{bmatrix} 0 \\ 0 \\ 0 \\ 0 \end{bmatrix}
+\end{displaymath}
+
 \end{document}
