--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -63,4 +63,19 @@ equal the zero vector (in matrix language, find two solutions to Az = 0).
 = \begin{bmatrix} 0 \\ 0 \\ 0 \\ 0 \end{bmatrix}
 \end{displaymath}
 
+\begin{verbatim}
+import numpy as np
+
+a = [[1,4,2],[2,5,3],[3,6,4],[4,7,5]]
+z1 = [-2, -1, 3]
+z2 = [4, 2, -6]
+
+b1 = np.dot(a, z1)
+b2 = np.dot(a, z2)
+assert(b1 == np.zeros(4))
+assert(b2 == np.zeros(4))
+print(f"{b1=} {b2=}")
+\end{verbatim}
+
+
 \end{document}
