--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -1,6 +1,10 @@
 \documentclass{article}
 \usepackage{amsfonts, amsmath}
 
+%% TODO: decrease margins
+%% TODO: move title up
+%% TODO: make it two columns??
+
 \title{Exercises from \\
   Linear Algebra and Learning from Data\\
   by Gilbert Strang
