latex automation TODOs

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -12,6 +12,10 @@
 
 \newcommand{\sep}{\begin{center}$\heartsuit$~$\diamondsuit$~$\clubsuit$~$\spadesuit$\end{center}}
 
+%% TODO: create \problem counter
+%% TODO: create \newproblemset command
+%% TODO: create \newproblem command
+
 \begin{document}
 \maketitle
 
