new command for vector notation

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -11,6 +11,7 @@
 }
 
 \newcommand{\sep}{\begin{center}$\heartsuit$~$\diamondsuit$~$\clubsuit$~$\spadesuit$\end{center}}
+\newcommand{\vect}[1]{\ensuremath{\boldsymbol{#1}}}
 
 %% TODO: create \problem counter
 %% TODO: create \newproblemset command
