--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -89,7 +89,8 @@ print(f"{b1=} {b2=}")
 \sep
 %% TODO convert text to LaTex
 \noindent\textbf{3} (Practice with subscripts) The vectors $\vect{a}_1, \vect{a}_2, \ldots , \vect{a}_n$ are in $m$-dimensional space $\mathbb{R}^m$, and a combination $c_1\vect{a}_1 + \cdots + c_n\vect{a}_n$ is the zero vector. That statement is at the vector level. 
-(1) Write that statement at the matrix level. Use the matrix A with the a's in its columns and use the column vector c = (c1, ... , cn)-
-(2) Write that statement at the scalar level. Use subscripts and sigma notation to add up numbers. The column vector aj has components a 1j, a 2j, ... , amj. 
-
+\begin{enumerate}
+\item Write that statement at the matrix level. Use the matrix $A$ with the $\vect{a}$'s in its columns and use the column vector $\vect{c} = (c_1, \ldots, c_n)$.
+\item Write that statement at the scalar level. Use subscripts and sigma notation to add up numbers. The column vector $\vect{a}_j$ has components $\vect{a}_{1j}, \vect{a}_{2j}, \ldots, \vect{a}_{mj}$.
+\end{enumerate}
 \end{document}
