decreased margins (=1 inch), used A4 paper format

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -1,8 +1,9 @@
 \documentclass{article}
 \usepackage{amsfonts, amsmath}
 
-%% TODO: decrease margins
-%% TODO: move title up
+\usepackage{geometry}
+\geometry{a4paper, portrait, margin=1in}
+
 %% TODO: make it two columns??
 
 \title{Exercises from \\
