--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -110,4 +110,8 @@ print(f"{b1=} {b2=}")
 \sum_{j=1}^{n} \sum_{i=1}^{m} a_{i,j} * c_j = 0
 \end{displaymath}
 
+\sep
+
+\noindent\textbf{4} Suppose $A$ is the 3 by 3 matrix $\mathbf{ones}(3, 3)$ of all ones. Find two independent vectors $\vect{x}$ and $\vect{y}$ that solve $A\vect{x} = 0$ and $A\vect{y} = 0$. Write that first equation $A\vect{x} = 0$ (with numbers) as a combination of the columns of $A$. Why don't I ask for a third independent vector with $A\vect{z} = 0$? 
+
 \end{document}
