first part of solution to problem 3 problem set I.1

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -114,4 +114,10 @@ print(f"{b1=} {b2=}")
 
 \noindent\textbf{4} Suppose $A$ is the 3 by 3 matrix $\mathbf{ones}(3, 3)$ of all ones. Find two independent vectors $\vect{x}$ and $\vect{y}$ that solve $A\vect{x} = 0$ and $A\vect{y} = 0$. Write that first equation $A\vect{x} = 0$ (with numbers) as a combination of the columns of $A$. Why don't I ask for a third independent vector with $A\vect{z} = 0$? 
 
+\begin{displaymath}
+  x = \begin{bmatrix} 1 \\ -1 \\ 0 \end{bmatrix}
+  ~~~
+  \begin{bmatrix} 1 ~ 1 ~ 1 \\ 1 ~ 1 ~ 1 \\ 1 ~ 1 ~ 1 \end{bmatrix} \begin{bmatrix} 1 \\ -1 \\ 0 \end{bmatrix} = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}
+\end{displaymath}
+
 \end{document}
