--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -120,4 +120,7 @@ print(f"{b1=} {b2=}")
   \begin{bmatrix} 1 ~ 1 ~ 1 \\ 1 ~ 1 ~ 1 \\ 1 ~ 1 ~ 1 \end{bmatrix} \begin{bmatrix} 1 \\ -1 \\ 0 \end{bmatrix} = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}
 \end{displaymath}
 
+\begin{displaymath}
+  y = \begin{bmatrix} 1 \\ -1 \\ 0 \end{bmatrix}
+\end{displaymath}
 \end{document}
