--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -121,6 +121,8 @@ print(f"{b1=} {b2=}")
 \end{displaymath}
 
 \begin{displaymath}
-  y = \begin{bmatrix} 1 \\ -1 \\ 0 \end{bmatrix}
+  y = \begin{bmatrix} 1 \\ 1 \\ -2 \end{bmatrix}
+  ~~~
+  \begin{bmatrix} 1 ~ 1 ~ 1 \\ 1 ~ 1 ~ 1 \\ 1 ~ 1 ~ 1 \end{bmatrix} \begin{bmatrix} 1 \\ 1 \\ -2 \end{bmatrix} = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}
 \end{displaymath}
 \end{document}
