answering the question in problem 4 problemset I.1

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -125,4 +125,7 @@ print(f"{b1=} {b2=}")
   ~~~
   \begin{bmatrix} 1 ~ 1 ~ 1 \\ 1 ~ 1 ~ 1 \\ 1 ~ 1 ~ 1 \end{bmatrix} \begin{bmatrix} 1 \\ 1 \\ -2 \end{bmatrix} = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}
 \end{displaymath}
+
+Any other $\vect{z}$ vector that solves the equation $A\vect{z}=0$ is a linear combination of $\vect{x}$ and $\vect{y}$.
+
 \end{document}
