--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -4,6 +4,8 @@
 \usepackage{geometry}
 \geometry{a4paper, portrait, margin=1in}
 
+\usepackage{enumitem}
+
 %% TODO: make it two columns??
 
 \title{Exercises from \\
@@ -90,7 +92,7 @@ print(f"{b1=} {b2=}")
 \sep
 
 \noindent\textbf{3} (Practice with subscripts) The vectors $\vect{a}_1, \vect{a}_2, \ldots , \vect{a}_n$ are in $m$-dimensional space $\mathbb{R}^m$, and a combination $c_1\vect{a}_1 + \cdots + c_n\vect{a}_n$ is the zero vector. That statement is at the vector level. 
-\begin{enumerate}
+\begin{enumerate}[label=(\arabic*)]
 \item Write that statement at the matrix level. Use the matrix $A$ with the $\vect{a}$'s in its columns and use the column vector $\vect{c} = (c_1, \ldots, c_n)$.
 \item Write that statement at the scalar level. Use subscripts and sigma notation to add up numbers. The column vector $\vect{a}_j$ has components $\vect{a}_{1j}, \vect{a}_{2j}, \ldots, \vect{a}_{mj}$.
 \end{enumerate}
