that was not a double summation, one was just an iteration

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -109,7 +109,7 @@ print(f"{b1=} {b2=}")
 \end{displaymath}
 
 \begin{displaymath}
-\sum_{j=1}^{n} \sum_{i=1}^{m} a_{i,j} * c_j = 0
+  \sum_{j=1}^{n} a_{i,j} * c_j = 0 ~ \text{for i in 1\ldots m}
 \end{displaymath}
 
 \sep
