--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -145,4 +145,12 @@ assert((b2 == zeros).all())
 print(f"{b1=} {b2=}")
 \end{verbatim}
 
+\sep
+
+\noindent\textbf{5} The linear combinations of $\vect{v} = (1, 1, 0)$ and $\vect{w} = (0, 1, 1)$ fill a plane in $\mathbb{R}^3$.
+\begin{enumerate}[label=(\alph*)]
+\item Find a vector z that is perpendicular to v and w. Then z is perpendicular to every vector cv + dw on the plane: (cv + dw)T z = cvT z + dwT z = 0 + 0. 
+\item Find a vector u that is not on the plane. Check that u T z =f. 0.
+\end{enumerate}
+
 \end{document}
