completed latex of problem 5 problemset I.1

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -149,8 +149,8 @@ print(f"{b1=} {b2=}")
 
 \noindent\textbf{5} The linear combinations of $\vect{v} = (1, 1, 0)$ and $\vect{w} = (0, 1, 1)$ fill a plane in $\mathbb{R}^3$.
 \begin{enumerate}[label=(\alph*)]
-\item Find a vector $\vect{z}$ that is perpendicular to $\vect{v}$ and $\vect{w}$. Then $\vect{z}$ is perpendicular to every vector $c\vect{v} + d\vect{w}$ on the plane: $(c\vect{v} + d\vect{w})^T ~ \vect{z} = c\vect{v}^T z + dwT z = 0 + 0$. 
-\item Find a vector u that is not on the plane. Check that u T z =f. 0.
+\item Find a vector $\vect{z}$ that is perpendicular to $\vect{v}$ and $\vect{w}$. Then $\vect{z}$ is perpendicular to every vector $c\vect{v} + d\vect{w}$ on the plane: $(c\vect{v} + d\vect{w})^T \vect{z} = c\vect{v}^T\vect{z} + d\vect{w}^T\vect{z} = 0 + 0$. 
+\item Find a vector $\vect{u}$ that is not on the plane. Check that $\vect{u}^T\vect{z} \not= 0$.
 \end{enumerate}
 
 \end{document}
