solution to problem 5 problemset I.1

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -153,4 +153,13 @@ print(f"{b1=} {b2=}")
 \item Find a vector $\vect{u}$ that is not on the plane. Check that $\vect{u}^T\vect{z} \not= 0$.
 \end{enumerate}
 
+\begin{displaymath}
+  \vect{z} = \begin{bmatrix} 1 \\ -1 \\ 1 \end{bmatrix}
+  ~~~
+  \vect{u} = \vect{v} + \vect{z} = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} + \begin{bmatrix} 1 \\ -1 \\ 1 \end{bmatrix} = \begin{bmatrix} 2 \\ 0 \\ 1 \end{bmatrix}
+\end{displaymath}
+\begin{displaymath}
+  \vect{u}^T\vect{z} = \begin{bmatrix} 2 ~ 0 ~ 1 \end{bmatrix} \begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix} = 3
+\end{displaymath}
+
 \end{document}
