--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -14,6 +14,7 @@
 }
 
 \newcommand{\sep}{\begin{center}$\heartsuit$~$\diamondsuit$~$\clubsuit$~$\spadesuit$\end{center}}
+\newcommand{\sol}{\begin{center}\small{Solution:}\end{center}}
 \newcommand{\vect}[1]{\ensuremath{\boldsymbol{#1}}}
 
 %% TODO: create \problem counter
