counter of the current problem number

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -17,9 +17,9 @@
 \newcommand{\sol}{\begin{center}\small{Solution:}\end{center}}
 \newcommand{\vect}[1]{\ensuremath{\boldsymbol{#1}}}
 
-%% TODO: create \problem counter
 %% TODO: create \newproblemset command
 %% TODO: create \newproblem command
+\newcounter{prblm}
 
 \begin{document}
 \maketitle
