--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -17,9 +17,14 @@
 \newcommand{\sol}{\begin{center}\small{Solution:}\end{center}}
 \newcommand{\vect}[1]{\ensuremath{\boldsymbol{#1}}}
 
-%% TODO: create \newproblem command
 \newcounter{prblm}
 \newcommand{\problemset}[1]{\setcounter{prblm}{0}\section*{#1}}
+\newcommand{\problem}[1]{
+  \ifnum\value{prblm} > 0 \sep \fi
+  \stepcounter{prblm}
+  \noindent\textbf{\arabic{prblm}} #1
+  \sol
+}
 
 \begin{document}
 \maketitle
