replaced section with problemset

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -29,7 +29,8 @@
 \begin{document}
 \maketitle
 
-\section*{Problem Set I.1}
+\problemset{Problem Set I.1}
+
 
 \noindent\textbf{1} Give an example where a combination of three nonzero vectors in $\mathbb{R}^4$ is the zero 
 vector. Then write your example in the form $Ax = 0$. What are the shapes of $A$ and
