text of Problem 6 ProblemSet I.1

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -195,4 +195,6 @@ assert(rank2 == 3)
 print(f"{z=} {u=} {z_dot_u=}")
 \end{verbatim}
 
+\problem{If three corners of a parallelogram are (1, 1), (4, 2), and (1, 3), what are all three of the possible fourth corners? Draw two of them.}
+
 \end{document}
