--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -197,7 +197,7 @@ print(f"{z=} {u=} {z_dot_u=}")
 
 \problem{If three corners of a parallelogram are (1, 1), (4, 2), and (1, 3), what are all three of the possible fourth corners? Draw two of them.}
 
-\problem{Describe the column space of A = [v w v + 2w]. Describe the nullspace of A: all vectors x = (x1, x2 , x3 ) that solve Ax = 0. Add the "dimensions" of that plane (the column space of A) and that line (the nullspaceof A):
+\problem{Describe the column space of $A = [v ~ w ~ v + 2w]$. Describe the nullspace of $A$: all vectors $\vect{x} = (x1, x2, x3)$ that solve $A\vect{x} = 0$. Add the "dimensions" of that plane (the column space of A) and that line (the nullspaceof A):
 
 dimension of column space + dimension of nullspace = number of columns}
 \end{document}
