--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -199,6 +199,24 @@ print(f"{z=} {u=} {z_dot_u=}")
 
 \problem{If three corners of a parallelogram are (1, 1), (4, 2), and (1, 3), what are all three of the possible fourth corners? Draw two of them.}
 
+The three possible fourth corners are:
+\begin{gather*}
+  (1,1) + ((4,2) - (1,3)) = (4,0) \\
+  (4,2) + ((1,3) - (1,1)) = (4,4) \\
+  (1,3) + ((1,1) - (4,2)) = (-2, 2) \\
+\end{gather*}
+
+\begin{tikzpicture}
+  \draw[step=1cm,gray,very thin] (-1.9,-1.9) grid (5.9,5.9);
+  \draw[thick,->] (0,0) -- (4.5,0);
+  \draw[thick,->] (0,0) -- (0,4.5);
+  \fill[blue!40!white] (1,1) circle (1mm) node[anchor=north east] {(1,1)};
+  \fill[blue!40!white] (4,2) circle (1mm) node[anchor=south east] {(4,2)};
+  \fill[blue!40!white] (1,3) circle (1mm) node[anchor=south east] {(1,3)};
+  \fill[red!40!white]  (4,0) circle (1mm) node[anchor=south east] {(4,0)};
+  \fill[red!40!white]  (4,4) circle (1mm) node[anchor=south east] {(4,4)};
+\end{tikzpicture}
+
 \problem{Describe the column space of $A = [v ~ w ~ v + 2w]$. Describe the nullspace of $A$: all vectors $\vect{x} = (x1, x2, x3)$ that solve $A\vect{x} = 0$. Add the "dimensions" of that plane (the column space of $A$) and that line (the nullspace of $A$):
   \\
   \center{\textbf{dimension of column space + dimension of nullspace = number of columns}}}
