--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -219,7 +219,8 @@ The three possible fourth corners are:
   \fill[red!40!white]  (4,4) circle (1mm) node[anchor=south east] {(4,4)};
 \end{tikzpicture}
 
-\problem{Describe the column space of $A = [v ~ w ~ v + 2w]$. Describe the nullspace of $A$: all vectors $\vect{x} = (x1, x2, x3)$ that solve $A\vect{x} = 0$. Add the "dimensions" of that plane (the column space of $A$) and that line (the nullspace of $A$):
-  \\
-  \center{\textbf{dimension of column space + dimension of nullspace = number of columns}}}
+
+\problem{Describe the column space of $A = [\vect{v} ~ \vect{w} ~ \vect{v} + 2\vect{w}]$. Describe the nullspace of $A$: all vectors $\vect{x} = (x1, x2, x3)$ that solve $A\vect{x} = 0$. Add the "dimensions" of that plane (the column space of $A$) and that line (the nullspace of $A$):
+  \begin{center}{\textbf{dimension of column space + dimension of nullspace = number of columns}}\end{center}}
+
 \end{document}
