formatting of problem 8

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -231,5 +231,5 @@ The column space of $A$ is swept by the linear combinations of the column vector
   \item number of columns = 3
 \end{itemize}
 
-\problem{A = C R is a representation of the columns of A in the basis formed by the columns of C with coefficients in R. If Aij = P is 3 by 3, write down A and C and R.}
+\problem{$A = CR$ is a representation of the columns of $A$ in the basis formed by the columns of $C$ with coefficients in $R$. If Aij = P is 3 by 3, write down A and C and R.}
 \end{document}
