text of problem 9

--- a/laalfd_exercises.tex
+++ b/laalfd_exercises.tex
@@ -232,4 +232,7 @@ The column space of $A$ is swept by the linear combinations of the column vector
 \end{itemize}
 
 \problem{$A = CR$ is a representation of the columns of $A$ in the basis formed by the columns of $C$ with coefficients in $R$. If $A_{ij} = j^2$ is 3 by 3, write down $A$ and $C$ and $R$.}
+
+\problem{Suppose the column space of an m by n matrix is all of R3 . What can you say about m ? What can you say about n ? What can you say about the rank r ?}
+
 \end{document}
